--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <menu name="menu">
+            <button name="voltar"></button>
+            <div>
+                <button name="fecharMesa"></button>
+                <button name="transferenciaMesa"></button>
+                <button name="agrupamentoMesa"></button>
+                <button name="imprimirConsumo"></button>
+                <button name="logout"></button>
+                <img src="" alt="logo">
+            </div>
+        </menu>
+    </main>
 </body>
 </html>
