corpo da pagina

--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
     <title>Document</title>
 </head>
 <body>
+    <menu name="menu">
+        <button name="voltar"></button>
+        <div>
+            <button name="fecharMesa"></button>
+            <button name="transferenciaMesa"></button>
+            <button name="agrupamentoMesa"></button>
+            <button name="imprimirConsumo"></button>
+            <button name="logout"></button>
+            <img src="" alt="logo">
+        </div>
+    </menu>
     <main>
-        <menu name="menu">
-            <button name="voltar"></button>
-            <div>
-                <button name="fecharMesa"></button>
-                <button name="transferenciaMesa"></button>
-                <button name="agrupamentoMesa"></button>
-                <button name="imprimirConsumo"></button>
-                <button name="logout"></button>
-                <img src="" alt="logo">
-            </div>
-        </menu>
+        <div name="consultaProdutos">
+
+        </div>
+        <div name="telaItenslancados">
+            
+        </div>
     </main>
 </body>
 </html>
