--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     </menu>
     <main>
         <div name="consultaProdutos">
-
+            <input type="text" name="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
+            <div name="produtos">
+                <div name="itemProdutos"></div>
+            </div>
         </div>
         <div name="telaItenslancados">
-            
+
         </div>
     </main>
 </body>
