div do lançamento de itens

--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
         <div name="consultaProdutos">
             <input type="text" name="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
             <div name="produtos">
-                <div name="itemProdutos"></div>
+                <div name="itemProdutos">
+                    <p>Nome produto</p>
+                    <img src="" alt="Foto do produto">
+                    <p>R$10,00</p>
+                    <div name="adicionarTiraritem">
+                        <button name="tirarItem"><img src="" alt="Tirar um item"></button>
+                        <p name="quantidade">00</p>
+                        <button name="adicionarItem"><img src="" alt="Adicioar um item"></button>
+                    </div>
+                    <textarea name="observaoItem" id="" cols="30" rows="10" placeholder="Observação do item"></textarea>
+                </div>
             </div>
+            <button>Confirmar pedido</button>
         </div>
         <div name="telaItenslancados">
-
+            
         </div>
     </main>
 </body>
