grid de itens lançados

--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
             <button>Confirmar pedido</button>
         </div>
         <div name="telaItenslancados">
-            
+            <p name="numeroMesa">Mesa 00</p>
+            <div name="gridItens">
+                <div name="informacoesItem">
+                    <p name="descricaoItemLancado">Descrição item - Observação do item</p>
+                    <p>Qtde X Valor = Total</p>
+                </div>
+                <button name="excluirItem"><img src="" alt="Excluir um item lançado"></button>
+            </div>
+            <p name="totalMesa">Total R$130,99</p>
         </div>
     </main>
 </body>
