--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChefPlus</title>
 </head>
 <body>
     <menu name="menu">
-        <button name="voltar"></button>
-        <div>
-            <button name="fecharMesa"></button>
-            <button name="transferenciaMesa"></button>
-            <button name="agrupamentoMesa"></button>
-            <button name="imprimirConsumo"></button>
-            <button name="logout"></button>
+        <a name="voltar"></a>
+        <div name="itensMenu">
+            <a name="fecharMesa"></a>
+            <a name="transferenciaMesa"></a>
+            <a name="agrupamentoMesa"></a>
+            <a name="imprimirConsumo"></a>
+            <a name="logout"></a>
             <img src="" alt="logo">
         </div>
     </menu>
