--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
     <link rel="stylesheet" href="src/css/menu.css">
 </head>
 <body>
-    
     <header class="header">
+        <div class="container">
         <a class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
         <nav>
             <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
-                <label for="menu-hamburguer">
-                    <div class="menu">
-                        <span class="hamburguer"></span>
-                    </div>
-                </label>
+            <label for="menu-hamburguer">
+                <div class="menu">
+                    <span class="hamburguer"></span>
+                </div>
+            </label>
             <ul class="itensMenu">
                 <li><a href="#" class="fecharMesa"><img src="src/imagens/FecharMesa.png" alt="Fechar Mesa."></a></li>
                 <li><a href="#" class="transferenciaMesa"><img src="src/imagens/Transferencia.png" alt="Transferir consumo para outra mesa."></a></li>
                 <li><a href="#" class="agrupamentoMesa"><img src="src/imagens/Agrupamento.png" alt="Agrupar mesas."></a></li>
                 <li><a href="#" class="imprimirConsumo"><img src="src/imagens/impressora.png" alt="Imprimir consumo da mesa."></a></li>
                 <li><a href="#" class="logout"><img src="src/imagens/DeslogarSistema.png" alt="Deslogar do sistema."></a></li>
-                <li><img src="src/imagens/logo chefplus deitado.png" alt="logo"></li>
             </ul>
         </nav>
+        </div>
+        <img src="src/imagens/logo chefplus deitado.png" alt="logo" class="logo">
     </header>
     <main class="corpoPrincipal">
         <div class="consultaProdutos">
