grid de lancamento

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="src/imagens/logo chefplus deitado.png" alt="logo" class="logo">
     </header>
     <main class="corpoPrincipal">
-        <div class="consultaProdutos">
+        <div class="consultaProdutos tela">
             <input type="text" class="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
             <div class="produtos">
                 <div class="itemProdutos">
@@ -45,10 +45,30 @@
                     </div>
                     <textarea class="observaoItem" id="" cols="30" rows="3" placeholder="Observação do item"></textarea>
                 </div>
+                <div class="itemProdutos">
+                    <p>Nome produto</p>
+                    <img src="" alt="Foto do produto">
+                    <p>R$10,00</p>
+                    <div class="adicionarTiraritem">
+                        <button class="tirarItem"><img src="" alt="Tirar um item"></button>
+                        <p class="quantidade">00</p>
+                        <button class="adicionarItem"><img src="" alt="Adicioar um item"></button>
+                    </div>
+                </div>
+                <div class="itemProdutos">
+                    <p>Nome produto</p>
+                    <img src="" alt="Foto do produto">
+                    <p>R$10,00</p>
+                    <div class="adicionarTiraritem">
+                        <button class="tirarItem"><img src="" alt="Tirar um item"></button>
+                        <p class="quantidade">00</p>
+                        <button class="adicionarItem"><img src="" alt="Adicioar um item"></button>
+                    </div>
+                </div>
             </div>
-            <button>Confirmar pedido</button>
+            <button class="confirmarLancamento">Confirmar pedido</button>
         </div>
-        <div class="telaItenslancados">
+        <div class="telaItenslancados tela">
             <p class="numeroMesa">Mesa 00</p>
             <div class="gridItens">
                 <div class="informacoesItem">
