inicio do css do itens da tela

--- a/index.html
+++ b/index.html
@@ -35,34 +35,15 @@
             <input type="text" class="pesquisaProduto" id="" alt="Pesquisa de produto" placeholder="Pesquisar um produto">
             <div class="produtos">
                 <div class="itemProdutos">
-                    <p>Nome produto</p>
-                    <img src="" alt="Foto do produto">
-                    <p>R$10,00</p>
-                    <div class="adicionarTiraritem">
-                        <button class="tirarItem"><img src="" alt="Tirar um item"></button>
-                        <p class="quantidade">00</p>
-                        <button class="adicionarItem"><img src="" alt="Adicioar um item"></button>
+                    <div class="containerProdutos">
+                        <p class="nomeItem">Nome produto</p>
+                        <img src="" alt="Foto do produto">
+                        <p class="precoItem">R$10,00</p>
                     </div>
-                    <textarea class="observaoItem" id="" cols="30" rows="3" placeholder="Observação do item"></textarea>
-                </div>
-                <div class="itemProdutos">
-                    <p>Nome produto</p>
-                    <img src="" alt="Foto do produto">
-                    <p>R$10,00</p>
                     <div class="adicionarTiraritem">
-                        <button class="tirarItem"><img src="" alt="Tirar um item"></button>
+                        <button class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></button>
                         <p class="quantidade">00</p>
-                        <button class="adicionarItem"><img src="" alt="Adicioar um item"></button>
-                    </div>
-                </div>
-                <div class="itemProdutos">
-                    <p>Nome produto</p>
-                    <img src="" alt="Foto do produto">
-                    <p>R$10,00</p>
-                    <div class="adicionarTiraritem">
-                        <button class="tirarItem"><img src="" alt="Tirar um item"></button>
-                        <p class="quantidade">00</p>
-                        <button class="adicionarItem"><img src="" alt="Adicioar um item"></button>
+                        <button class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></button>
                     </div>
                 </div>
             </div>
