--- a/index.html
+++ b/index.html
@@ -103,6 +103,30 @@
                             <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
                         </div>
                     </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <p class="nomeItem">Nome produto</p>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <p class="precoItem">R$10,00</p>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <p class="nomeItem">Nome produto</p>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <p class="precoItem">R$10,00</p>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
                 </div>
                 <button class="confirmarLancamento">Confirmar pedido</button>
             </div>
