--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <div class="produtos">
                     <div class="itemProdutos">
                         <div class="containerProdutos">
-                            <p class="nomeItem">Nome produto</p>
+                            <h1 class="nomeItem">Nome produto teste 1 item</h1>
                             <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <p class="precoItem">R$10,00</p>
+                            <h2 class="precoItem">R$10,00</h2>
                         </div>
                         <div class="adicionarTirarItem">
                             <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
@@ -57,9 +57,9 @@
                     </div>
                     <div class="itemProdutos">
                         <div class="containerProdutos">
-                            <p class="nomeItem">Nome produto</p>
+                            <h1 class="nomeItem">Nome produto</h1>
                             <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <p class="precoItem">R$10,00</p>
+                            <h2 class="precoItem">R$10,00</h2>
                         </div>
                         <div class="adicionarTirarItem">
                             <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
@@ -69,9 +69,81 @@
                     </div>
                     <div class="itemProdutos">
                         <div class="containerProdutos">
-                            <p class="nomeItem">Nome produto</p>
+                            <h1 class="nomeItem">Nome produto</h1>
                             <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <p class="precoItem">R$10,00</p>
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
+                        </div>
+                        <div class="adicionarTirarItem">
+                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
+                            <p class="quantidade">00</p>
+                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
+                        </div>
+                    </div>
+                    <div class="itemProdutos">
+                        <div class="containerProdutos">
+                            <h1 class="nomeItem">Nome produto</h1>
+                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
+                            <h2 class="precoItem">R$10,00</h2>
                         </div>
                         <div class="adicionarTirarItem">
                             <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
