Consulta produtos finalizada

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <header class="header">
             <div class="container">
-                <a class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
+                <a href="#" class="voltar"><img src="src/imagens/Seta.png" alt="Voltar para a tela anterior."></a>
                 <nav>
                     <input type="checkbox" name="menu-hamburguer" id="menu-hamburguer">
                     <label for="menu-hamburguer">
@@ -46,102 +46,6 @@
                     <div class="itemProdutos">
                         <div class="containerProdutos">
                             <h1 class="nomeItem">Nome produto teste 1 item</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
-                            <img src="http://placekitten.com/80/80" alt="Foto do produto">
-                            <h2 class="precoItem">R$10,00</h2>
-                        </div>
-                        <div class="adicionarTirarItem">
-                            <a class="tirarItem"><img src="src/imagens/Retirar.png" alt="Tirar um item"></a>
-                            <p class="quantidade">00</p>
-                            <a class="adicionarItem"><img src="src/imagens/Adicionar.png" alt="Adicioar um item"></a>
-                        </div>
-                    </div>
-                    <div class="itemProdutos">
-                        <div class="containerProdutos">
-                            <h1 class="nomeItem">Nome produto</h1>
                             <img src="http://placekitten.com/80/80" alt="Foto do produto">
                             <h2 class="precoItem">R$10,00</h2>
                         </div>
